src/objects/CafeProductDetails__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Start_Date__c</fullName>
        <label>Activation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <label>Billing Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Identifier_Type__c</fullName>
        <label>Business Identifier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Identifier_Value__c</fullName>
        <label>Business Identifier Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Address__c</fullName>
        <description>This field contains Formatted Installation Address</description>
        <label>Installation Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Qos_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Qos Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Id__c</fullName>
        <label>Location Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modem_Type__c</fullName>
        <label>Modem Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Address information linked to this Opportunity</relationshipLabel>
        <relationshipName>CafeProductDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Id__c</fullName>
        <label>Parent Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>ProductIdentifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Offering_Id__c</fullName>
        <label>Product Offering Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Specification_Id__c</fullName>
        <label>Product Specification Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CafeProductDetail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Id__c</columns>
        <columns>Parent_Product_Id__c</columns>
        <columns>Modem_Type__c</columns>
        <columns>ProductIdentifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CafeProductDetail Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CafeProductDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>